--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@material-ui/core": "^3.9.1",
     "@material-ui/icons": "^3.0.2",
     "@types/react-dom": "^16.0.11",
+    "@types/react-helmet": "^5.0.8",
     "@types/react-router-dom": "^4.3.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-helmet": "^5.2.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "tslint": "^5.12.1",
