--- a/package.json
+++ b/package.json
@@ -10,14 +10,20 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@material-ui/core": "^3.9.1",
     "@material-ui/icons": "^3.0.2",
+    "@types/enzyme": "^3.1.16",
+    "@types/jest": "^23.3.13",
     "@types/react-dom": "^16.0.11",
     "@types/react-helmet": "^5.0.8",
     "@types/react-router-dom": "^4.3.1",
+    "@types/react-test-renderer": "^16.0.3",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.8.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-helmet": "^5.2.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
+    "react-test-renderer": "^16.7.0",
     "tslint": "^5.12.1",
     "typeface-pacifico": "^0.0.54",
     "typeface-roboto": "^0.0.54",
@@ -37,13 +43,5 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
-  "moduleNameMapper": {
-    "@components\\/(.*)$": "<rootDir>/src/components/$1",
-    "@data\\/(.*)$": "<rootDir>/src/data/$1",
-    "@pages\\/(.*)$": "<rootDir>/src/pages/$1"
-  },
-  "roots": [
-    "<rootDir>/src/"
   ]
 }
